# Duck-Game-Remake

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  InfoModelo.md  Makefile  README.md  Readme.md  build.sh  compare_outputs.sh  example_map.yaml  install.sh  run_tests.sh  setup.sh
.github/workflows/: pre-commit.yml
casos/05_three_players_three_pickups/: __client_0_stdout__  __client_1_stdout__  __client_descriptors__  __server_stdout__  __server_valgrind__  client  client_0_AtoB.dump  client_0_BtoA.dump  client_1_BtoA.dump  client_2_AtoB.dump  client_2_BtoA.dump  clients_schedule.sh  server
client/: AnimationHelper.cpp  AnimationHelper.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  CommandCenter.cpp  CommandCenter.h  DuckGraphicData.cpp  DuckGraphicData.h  LobbyWindow.cpp  LobbyWindow.h  ResourceManager.cpp  ResourceManager.h  ScreenRenderer.cpp  ScreenRenderer.h  WrapperLobbyApp.cpp  WrapperLobbyApp.h  animationRectStruct.h  duck-game.pro  duck_game_error.cpp  duck_game_error.h  game_client.cpp  game_client.h  lobby.cpp  lobby.h  lobby_protocol.cpp  lobby_protocol.h  lobby_window.cpp  lobby_window.h  lobby_window.ui  lobbywindow.ui  main.cpp  protocol.cpp  protocol.h  recources.qrc  thread_receiver.cpp  thread_receiver.h  thread_sender.cpp  thread_sender.h
client/types/: lobby_actions.h
common/: CMakeLists.txt  bullet.cpp  bullet.h  common_arma.h  common_constantRateLoop.cpp  common_posicion.h  common_position.h  common_protocol.cpp  common_protocol.h  common_protocolo.cpp  common_protocolo.h  common_queue.h  common_resolver.h  common_socket.cpp  common_socket.h  common_thread.h  common_weapon.cpp  common_weapon.h  duck.cpp  duck.h  snapshot.h  socket_was_closed_exception.h
common/types/: action_type.h  constants.h  duck_state.h  match_state.h  weapon_type.h
common/weapons/: common_weapon.cpp  common_weapon.h
documentacion/: ManualDeProyecto.md  ManualDeUsuario.md
editor/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  ImageWidget.cpp  ImageWidget.h  MapEditor.cpp  MapEditor.h  MapParser.cpp  MapParser.h  Tile.cpp  Tile.h  image_type.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
instalador/: build.sh  install.sh
maps/: cualq.yaml  default_map.yaml  example_map.yaml  probar_todas_las_armas.yaml
pruebas_graficas/: CMakeLists.txt  Makefile  cmake_install.cmake  lesson07.cc
pruebas_graficas/SDL2pp/tests/: testing.h
salidas/05_three_players_three_pickups/: __client_0_stdout__  __client_2_stdout__  __server_stdout__  client_0_AtoB.dump  client_0_BtoA.dump  client_1_AtoB.dump  client_2_AtoB.dump
server/: CMakeLists.txt  PlayerActionHandler.cpp  PlayerActionHandler.h  main.cpp  map_info.h  server_acceptor.cpp  server_acceptor.h  server_class.cpp  server_class.h  server_client_session.cpp  server_client_session.h  server_game.cpp  server_game.h  server_gameloop_message.h  server_main.cpp  server_match.cpp  server_match.h  server_match_queues_monitor.cpp  server_match_queues_monitor.h  server_match_state_monitor.cpp  server_match_state_monitor.h  server_matches_monitor.cpp  server_matches_monitor.h  server_mensaje_gameloop.h  server_pato.cpp  server_pato.h  server_protocol.cpp  server_protocol.h  server_protocolo.cpp  server_protocolo.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_thread_receiver.cpp  server_thread_receiver.h  server_user_client.cpp  server_user_client.h  weapon_handler.h
server/types/: client_identity.h  match_status.h
tests/: CMakeLists.txt  duck_test.cpp  test_main  test_main.cpp  test_protocol.cpp  tests_pato.cpp  tests_protocolo.cpp
tests/casos/05_three_players_three_pickups/: __client_0_valgrind__  __client_1_valgrind__  __client_2_valgrind__  client_1_AtoB.dump
tests/salidas/05_three_players_three_pickups/: __client_2_stdout__
